--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,21 +1,29 @@
+@import "./colors";
+
 .container {
-  padding: 0 2rem;
+  height: 100vh;
+  max-width: 100vw;
+  max-height: 100vh;
+  background-image: url("/2022-04-26_lala-Biennale_header-13-neu.png");
+  background-repeat: no-repeat;
+  background-position: center top;
+  background-attachment: scroll;
+  background-size: cover;
 }
 
 .main {
-  min-height: 100vh;
-  padding: 4rem 0;
+  height: 100%;
+  padding: 20px 0;
+  padding-bottom: 107px;
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
 
 .footer {
   display: flex;
   flex: 1;
-  padding: 2rem 0;
   border-top: 1px solid #eaeaea;
   justify-content: center;
   align-items: center;
@@ -29,7 +37,6 @@
 }
 
 .title a {
-  color: #0070f3;
   text-decoration: none;
 }
 
@@ -79,19 +86,37 @@
   text-align: left;
   color: inherit;
   text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
+  box-shadow: 12px 12px 16px 0 rgba(0, 0, 0, 0.25),
+    -8px -8px 12px 0 rgba(255, 255, 255, 0.3);
+  background: linear-gradient(
+    135deg,
+    rgba(88, 88, 88, 0.22),
+    rgba(255, 255, 255, 0.25)
+  );
+  background-color: $orange_lala;
+  border-radius: 50px;
   transition: color 0.15s ease, border-color 0.15s ease;
   max-width: 300px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  -ms-border-radius: 50px;
+  -o-border-radius: 50px;
 }
 
 .card:hover,
 .card:focus,
 .card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+  cursor: pointer;
 }
-
+.card:active {
+  transform: translateY(10px);
+  box-shadow: inset 6px 6px 10px 0 rgba(0, 0, 0, 0.2),
+    inset -6px -6px 10px 0 rgba(255, 255, 255, 0.5);
+  -webkit-transform: translateY(10px);
+  -moz-transform: translateY(10px);
+  -ms-transform: translateY(10px);
+  -o-transform: translateY(10px);
+}
 .card h2 {
   margin: 0 0 1rem 0;
   font-size: 1.5rem;
@@ -102,10 +127,28 @@
   font-size: 1.25rem;
   line-height: 1.5;
 }
-
+.biennale {
+  position: absolute;
+  max-width: 300px;
+  bottom: 0;
+  padding-bottom: 10px;
+}
+.resumeCard {
+  position: absolute;
+  max-width: 300px;
+  left: 0;
+  top: 0;
+  padding-left: 20px;
+  padding-top: 20px;
+}
+.resumeCard:hover {
+  cursor: pointer;
+}
 .logo {
   height: 1em;
   margin-left: 0.5rem;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 @media (max-width: 600px) {
@@ -122,8 +165,5 @@
   }
   .code {
     background: #111;
-  }
-  .logo img {
-    filter: invert(1);
   }
 }
