--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,11 +1,16 @@
+@import "./colors";
+
 html,
 body {
+  overflow: hidden;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
-
+h1 {
+  color: $yellow_lala;
+}
 a {
   color: inherit;
   text-decoration: none;
@@ -18,9 +23,10 @@ a {
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
+    max-width: 100vw;
+    max-height: 100vh;
   }
   body {
-    color: white;
-    background: black;
+    background: white;
   }
 }
