--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -20,20 +20,38 @@
   flex-direction: column;
   align-items: center;
 }
-
-.footer {
-  display: flex;
-  flex: 1;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
+.dashboard {
+  margin-top: 20px;
+  max-width: 100%;
+  width: 100%;
+  height: 100%;
+  max-height: 100%;
 }
 
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
+.szenarioButtons {
+  text-align: center;
+
+  button {
+    box-shadow: 12px 12px 16px 0 rgba(0, 0, 0, 0.25),
+      -8px -8px 12px 0 rgba(255, 255, 255, 0.3);
+    color: #fff;
+    border-radius: 50px;
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    -ms-border-radius: 50px;
+    -o-border-radius: 50px;
+    margin: 10px;
+    min-width: 300px;
+  }
+  button:active {
+    transform: translateY(10px);
+    box-shadow: inset 6px 6px 10px 0 rgba(0, 0, 0, 0.2),
+      inset -6px -6px 10px 0 rgba(255, 255, 255, 0.5);
+    -webkit-transform: translateY(10px);
+    -moz-transform: translateY(10px);
+    -ms-transform: translateY(10px);
+    -o-transform: translateY(10px);
+  }
 }
 
 .title a {
@@ -72,31 +90,15 @@
     Bitstream Vera Sans Mono, Courier New, monospace;
 }
 
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-}
-
 .card {
-  margin: 1rem;
-  padding: 1.5rem;
+  display: inline-block;
   text-align: left;
-  color: inherit;
+  width: auto;
+  color: #fff;
   text-decoration: none;
-  box-shadow: 12px 12px 16px 0 rgba(0, 0, 0, 0.25),
-    -8px -8px 12px 0 rgba(255, 255, 255, 0.3);
-  background: linear-gradient(
-    135deg,
-    rgba(88, 88, 88, 0.22),
-    rgba(255, 255, 255, 0.25)
-  );
+
   background-color: $orange_lala;
   border-radius: 50px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
   -webkit-border-radius: 50px;
   -moz-border-radius: 50px;
   -ms-border-radius: 50px;
@@ -118,7 +120,6 @@
   -o-transform: translateY(10px);
 }
 .card h2 {
-  margin: 0 0 1rem 0;
   font-size: 1.5rem;
 }
 
@@ -150,20 +151,7 @@
   margin-top: 20px;
   margin-bottom: 20px;
 }
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  .card,
-  .footer {
-    border-color: #222;
-  }
-  .code {
-    background: #111;
-  }
+.nameForm {
+  text-align: center;
+  margin-top: 20%;
 }
