--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -32,6 +32,40 @@ h2 {
   box-sizing: border-box;
 }
 
+.btn {
+  box-shadow: 12px 12px 16px 0 rgba(0, 0, 0, 0.25),
+    -8px -8px 12px 0 rgba(255, 255, 255, 0.3);
+  color: #fff;
+  border-radius: 50px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  -ms-border-radius: 50px;
+  -o-border-radius: 50px;
+  margin: 10px;
+  min-width: 300px;
+}
+.btn:active {
+  transform: translateY(10px);
+  box-shadow: inset 6px 6px 10px 0 rgba(0, 0, 0, 0.2),
+    inset -6px -6px 10px 0 rgba(255, 255, 255, 0.5);
+  -webkit-transform: translateY(10px);
+  -moz-transform: translateY(10px);
+  -ms-transform: translateY(10px);
+  -o-transform: translateY(10px);
+}
+.modal-body {
+  text-align: center;
+}
+input {
+  width: 70% !important;
+  margin-bottom: 20px;
+  margin-left: 50%;
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
+}
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
@@ -39,6 +73,6 @@ h2 {
     max-height: 100vh;
   }
   body {
-    background: white;
+    background: #ffffff;
   }
 }
