adding gallery page

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -11,6 +11,14 @@
   background-size: cover;
 }
 
+.gallery {
+  background-image: url("/2022-04-26_lala-Biennale_header-13-neu.png");
+  background-repeat: no-repeat;
+  background-position: center top;
+  background-attachment: scroll;
+  background-size: cover;
+}
+
 .main {
   height: 100%;
   padding: 20px 0;
