--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -12,7 +12,7 @@ $theme-colors: (
 @import "~bootstrap/scss/bootstrap.scss";
 html,
 body {
-  overflow: hidden;
+  // overflow: hidden;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
