--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,5 +1,5 @@
 @import "./colors";
-
+@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;1,300&display=swap");
 .container {
   height: 100vh;
   max-width: 100vw;
@@ -114,11 +114,13 @@
 }
 .resumeCard {
   position: absolute;
+  height: 4rem;
   max-width: 300px;
   left: 0;
   top: 0;
   padding-left: 20px;
   padding-top: 20px;
+  line-height: 1.15;
 }
 .resumeCard:hover {
   cursor: pointer;
@@ -146,4 +148,38 @@
   background-size: cover;
   min-height: 100vh;
   overflow-x: hidden;
+}
+.countdown {
+  background-color: $purple_lala;
+  text-align: center;
+  border-radius: 50px;
+  min-width: 100px;
+  padding: 10px;
+  font-family: "Rubik", sans-serif;
+  color: $yellow_lala;
+  position: fixed;
+  top: 0;
+  right: 0;
+  margin: 20px;
+  font-size: 4rem;
+  line-height: 1;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  -ms-border-radius: 50px;
+  -o-border-radius: 50px;
+}
+.dayTime {
+  background-color: $orange_lala;
+  padding: 10px;
+  border-radius: 100px;
+  -webkit-border-radius: 100px;
+  -moz-border-radius: 100px;
+  -ms-border-radius: 100px;
+  -o-border-radius: 100px;
+  line {
+    color: #fff;
+  }
+  circle {
+    color: white;
+  }
 }
