--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -1,7 +1,6 @@
-$yellow_lala: #ffed00;
-$purple_lala: #9e79b5;
+$yellow_lala: #f6e94d;
+$purple_lala: #68c4e8;
 $orange_lala: #ff5100;
 $orange_light_lala: #fe9a6c;
 $aqua_lala: #b8ddde;
-$blue_lala: #68c4e8;
 $green_lala: #a3c713;
