--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -5,11 +5,12 @@ $theme-colors: (
   "primary": $yellow_lala,
   "secondary": $green_lala,
   "danger": $orange_lala,
-  "warning": $blue_lala,
+  "warning": $purple_lala,
 );
 
 // Import Bootstrap and its default variables
 @import "~bootstrap/scss/bootstrap.scss";
+@import "~rc-slider/assets/index.css";
 html,
 body {
   // overflow: hidden;
@@ -18,15 +19,13 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
-h1 {
-  color: $purple_lala;
+h1,
+h2 {
+  color: #000;
 }
 a {
   color: inherit;
   text-decoration: none;
-}
-h2 {
-  color: $purple-lala;
 }
 * {
   box-sizing: border-box;
@@ -88,4 +87,46 @@ input {
 }
 code {
   color: #fff;
+}
+.rc-slider-mark-text {
+  font-size: 1.7rem;
+  color: #fff !important;
+  margin-left: 60px;
+}
+.rc-slider-rail {
+  transform: translateX(18px) !important;
+  -webkit-transform: translateX(18px) !important;
+  -moz-transform: translateX(18px) !important;
+  -ms-transform: translateX(18px) !important;
+  -o-transform: translateX(18px) !important;
+}
+.rc-slider-handle {
+  background-color: $purple-lala !important;
+  border-color: $aqua_lala !important;
+  opacity: 1 !important;
+  width: 50px !important;
+  height: 50px !important;
+}
+.rc-slider-dot {
+  width: 10px !important;
+  height: 10px !important;
+  transform: translateX(15px) !important;
+  -webkit-transform: translateX(15px) !important;
+  -moz-transform: translateX(15px) !important;
+  -ms-transform: translateX(15px) !important;
+  -o-transform: translateX(15px) !important;
+}
+
+.szenarioButtons {
+  text-align: center;
+
+  button {
+    font-size: 1.7rem;
+    height: 130px;
+    border-radius: 100px;
+    -webkit-border-radius: 100px;
+    -moz-border-radius: 100px;
+    -ms-border-radius: 100px;
+    -o-border-radius: 100px;
+  }
 }
