adding upvoting and sorting in gallery

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -160,10 +160,9 @@
 
 .gallery {
   h1 {
-    color: $yellow_lala;
-    margin-bottom: 30px;
+    font-size: 4rem;
   }
-  background-image: url("/2022-04-26_lala-Biennale_header-14-neu.png");
+  background-image: url("/2022-04-26_lala-Biennale_header-13-neu.png");
   background-repeat: no-repeat;
   background-position: center top;
   background-attachment: scroll;
