--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,7 +3,7 @@
 // change the default bootstrap theme
 $theme-colors: (
   "primary": $yellow_lala,
-  "secondary": $green_lala,
+  "secondary": $orange_light_lala,
   "danger": $orange_lala,
   "warning": $purple_lala,
 );
