--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -238,3 +238,10 @@
   -ms-transform: translateY(0px);
   -o-transform: translateY(0px);
 }
+.footer {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  width: 100vw;
+  text-align: center;
+  background-color: $aqua_lala;
+}
