--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -44,8 +44,8 @@
   text-align: center;
 
   #dayTimeButton {
-    margin-top: 30%;
-    padding: 100px;
+    margin-top: 15px;
+    padding: 65px;
     text-align: center;
     align-items: center;
     min-width: 0;
