--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,7 +2,7 @@
 
 // change the default bootstrap theme
 $theme-colors: (
-  "primary": $yellow_lala,
+  "primary": $aqua_lala,
   "secondary": $orange_light_lala,
   "danger": $orange_lala,
   "warning": $purple_lala,
@@ -88,34 +88,6 @@ input {
 code {
   color: #fff;
 }
-.rc-slider-mark-text {
-  font-size: 1.7rem;
-  color: #fff !important;
-  margin-left: 60px;
-}
-.rc-slider-rail {
-  transform: translateX(18px) !important;
-  -webkit-transform: translateX(18px) !important;
-  -moz-transform: translateX(18px) !important;
-  -ms-transform: translateX(18px) !important;
-  -o-transform: translateX(18px) !important;
-}
-.rc-slider-handle {
-  background-color: $purple-lala !important;
-  border-color: $aqua_lala !important;
-  opacity: 1 !important;
-  width: 50px !important;
-  height: 50px !important;
-}
-.rc-slider-dot {
-  width: 10px !important;
-  height: 10px !important;
-  transform: translateX(15px) !important;
-  -webkit-transform: translateX(15px) !important;
-  -moz-transform: translateX(15px) !important;
-  -ms-transform: translateX(15px) !important;
-  -o-transform: translateX(15px) !important;
-}
 
 .szenarioButtons {
   text-align: center;
@@ -129,4 +101,85 @@ code {
     -ms-border-radius: 100px;
     -o-border-radius: 100px;
   }
+}
+
+.weatherSlider {
+  .rc-slider-mark-text {
+    font-size: 1.7rem;
+    color: #fff !important;
+    margin-left: 60px;
+  }
+  .rc-slider-rail {
+    transform: translateX(18px) !important;
+    -webkit-transform: translateX(18px) !important;
+    -moz-transform: translateX(18px) !important;
+    -ms-transform: translateX(18px) !important;
+    -o-transform: translateX(18px) !important;
+  }
+  .rc-slider-handle {
+    background-color: $purple-lala !important;
+    border-color: $aqua_lala !important;
+    opacity: 1 !important;
+    width: 50px !important;
+    height: 50px !important;
+  }
+  .rc-slider-dot {
+    width: 10px !important;
+    height: 10px !important;
+    transform: translateX(15px) !important;
+    -webkit-transform: translateX(15px) !important;
+    -moz-transform: translateX(15px) !important;
+    -ms-transform: translateX(15px) !important;
+    -o-transform: translateX(15px) !important;
+  }
+}
+
+.tempSlider {
+  padding-top: 10px !important;
+  margin-top: 10%;
+  background-color: $aqua_lala;
+  min-width: 100%;
+  min-width: 50px;
+  padding: 50px;
+  height: 150px;
+  width: 100%;
+  .rc-slider-mark-text {
+    font-size: 1.7rem;
+    color: #fff !important;
+    margin-top: 30px;
+  }
+  .rc-slider-rail {
+    transform: translateY(18px);
+    -webkit-transform: translateY(18px);
+    -moz-transform: translateY(18px);
+    -ms-transform: translateY(18px);
+    -o-transform: translateY(18px);
+  }
+  .rc-slider-handle {
+    background-color: $purple-lala !important;
+    border-color: $aqua_lala !important;
+    opacity: 1 !important;
+    width: 50px !important;
+    height: 50px !important;
+  }
+  .rc-slider-dot {
+    width: 10px !important;
+    height: 10px !important;
+    transform: translateY(20px) !important;
+    -webkit-transform: translateY(20px) !important;
+    -moz-transform: translateY(20px) !important;
+    -ms-transform: translateY(20px) !important;
+    -o-transform: translateY(20px) !important;
+  }
+  //rc-slider-with-marks
+}
+
+.tempSlider:active {
+  transform: translateY(0px);
+  box-shadow: 12px 12px 16px 0 rgba(0, 0, 0, 0.25),
+    -8px -8px 12px 0 rgba(255, 255, 255, 0.3);
+  -webkit-transform: translateY(0px);
+  -moz-transform: translateY(0px);
+  -ms-transform: translateY(0px);
+  -o-transform: translateY(0px);
 }
